Uredjivanje pocetne stranice

--- a/index.html
+++ b/index.html
@@ -223,8 +223,20 @@
     </div>
   </div>
   <hr class="crta"/>
-  <div id="clanska-kartica">
-    <img src="img/clanskakartica.jpg" alt="Clanska Kartica reklama">
-  </div>
+  
+  <div>
+    <div id="clanska-kartica-newsletter">
+      <img src="img/clanskakartica.jpg" alt="Clanska Kartica reklama"/>
+      <form id="news-forma">
+        <label id="news-labela" for="email">Prijavite se na naš newsletter!</label><br>
+        <input class="newsletter-unos" type="email" id="email" placeholder="Unesite Vašu e-mail adresu...">
+        <button id="news-dugme" type="submit">Prijava</button>
+      </form><br><br>
+    </div><br>
+  </div><br>
+
+  <hr class="crta"/>
+  
+
 </body>
 </html>
