Dodata stranica knjige i futer

--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
   <nav>
     <ul>
       <li class="logo-link">
-        <a href="#">
+        <a href="index.html">
           <img alt="Logo knjizare" id="navbar-logo" src="img/logo.png">
         </a>
       </li>
-      <li><a href="#">Početna</a></li>
-      <li><a href="#">Knjige</a></li>
-      <li><a href="#">Pribor</a></li>
-      <li><a href="#">Galerija</a></li>
-      <li><a href="#">Kontakt</a></li>
+      <li><a href="index.html">Početna</a></li>
+      <li><a href="stranice/knjige/knjige.html">Knjige</a></li>
+      <li><a href="stranice/pribor/pribor.html">Pribor</a></li>
+      <li><a href="stranice/galerija/galerija.html">Galerija</a></li>
+      <li><a href="stranice/kontakt/kontakt.html">Kontakt</a></li>
     </ul>
   </nav>
 
@@ -77,7 +77,7 @@
       <div class="info">
         <p class="ime-knjige">Misli</p>
         <h4 class="pisac">Marko Aurelije</h4>
-        <hr/>
+        <hr/><br/>
         <div class="selekcija">
           <img id="korpa" alt="Korpa ikonica" src="img/kolica.png"></img>
           <div class="cena">770rsd</div>
@@ -89,7 +89,7 @@
       <div class="info">
         <p class="ime-knjige">Mala Italijanka</p>
         <h4 class="pisac">Lusinda Rajli</h4>
-        <hr/>
+        <hr/><br/>
         <div class="selekcija">
           <img id="korpa" alt="Korpa ikonica" src="img/kolica.png"></img>
           <div class="cena">1299rsd</div>
@@ -101,7 +101,7 @@
       <div class="info">
         <p class="ime-knjige">Pobednici</p>
         <h4 class="pisac">Fredrik Bakman</h4>
-        <hr/>
+        <hr/><br/>
         <div class="selekcija">
           <img id="korpa" alt="Korpa ikonica" src="img/kolica.png"></img>
           <div class="cena">1499rsd</div>
@@ -113,7 +113,7 @@
       <div class="info">
         <p class="ime-knjige">Rudnik</p>
         <h4 class="pisac">Miodrag Majić</h4>
-        <hr/>
+        <hr/><br/>
         <div class="selekcija">
           <img id="korpa" alt="Korpa ikonica" src="img/kolica.png"></img>
           <div class="cena">1199rsd</div>
@@ -125,7 +125,7 @@
       <div class="info">
         <p class="ime-knjige">Strelac</p>
         <h4 class="pisac">Paulo Koeljo</h4>
-        <hr/>
+        <hr/><br/>
         <div class="selekcija" >
           <img id="korpa" alt="Korpa ikonica" src="img/kolica.png"></img>
           <div class="cena">899rsd</div>
@@ -137,7 +137,7 @@
       <div class="info">
         <p class="ime-knjige">Dune</p>
         <h4 class="pisac">Frank Herbert</h4>
-        <hr/>
+        <hr/><br/>
         <div class="selekcija" >
           <img id="korpa" alt="Korpa ikonica" src="img/kolica.png"></img>
           <div class="cena">1599rsd</div>
@@ -154,7 +154,7 @@
       <div class="info">
         <p class="ime-knjige">Klanica Pet</p>
         <h4 class="pisac">Kurt Vonegat</h4>
-        <hr/>
+        <hr/><br/>
         <div class="selekcija">
           <img id="korpa" alt="Korpa ikonica" src="img/kolica.png"></img>
           <div class="cena">899rsd</div>
@@ -166,7 +166,7 @@
       <div class="info">
         <p class="ime-knjige">Jedini Izlaz</p>
         <h4 class="pisac">Marko Popović</h4>
-        <hr/>
+        <hr/><br/>
         <div class="selekcija">
           <img id="korpa" alt="Korpa ikonica" src="img/kolica.png"></img>
           <div class="cena">1099rsd</div>
@@ -178,7 +178,7 @@
       <div class="info">
         <p class="ime-knjige">Zašto spavamo</p>
         <h4 class="pisac">Metju Voker</h4>
-        <hr/>
+        <hr/><br/>
         <div class="selekcija">
           <img id="korpa" alt="Korpa ikonica" src="img/kolica.png"></img>
           <div class="cena">1199rsd</div>
@@ -190,7 +190,7 @@
       <div class="info">
         <p class="ime-knjige">Borba do pobede</p>
         <h4 class="pisac">Srđan Krstić</h4>
-        <hr/>
+        <hr/><br/>
         <div class="selekcija">
           <img id="korpa" alt="Korpa ikonica" src="img/kolica.png"></img>
           <div class="cena">599rsd</div>
@@ -202,7 +202,7 @@
       <div class="info">
         <p class="ime-knjige">Mit o ptici</p>
         <h4 class="pisac">Miroslav Antić</h4>
-        <hr/>
+        <hr/><br/>
         <div class="selekcija" >
           <img id="korpa" alt="Korpa ikonica" src="img/kolica.png"></img>
           <div class="cena">999rsd</div>
@@ -214,7 +214,7 @@
       <div class="info">
         <p class="ime-knjige">Soba čuda</p>
         <h4 class="pisac">Žilijen Sandrel</h4>
-        <hr/>
+        <hr/><br/>
         <div class="selekcija" >
           <img id="korpa" alt="Korpa ikonica" src="img/kolica.png"></img>
           <div class="cena">699rsd</div>
@@ -235,8 +235,23 @@
     </div><br>
   </div><br>
 
-  <hr class="crta"/>
   
+  <footer id="footer">
+    <div id="levi-futer">
+      <ul>Najposećenije stranice:
+        <li>
+          <a id="prvi-link" href="#">Link1</a>
+        </li>
+        <li>
+          <a id="drugi-link" href="#">Link1</a>
+        </li>
+        <li>
+          <a id="treci-link" href="#">Link1</a>
+        </li>
+      </ul>
+    </div>
 
+    <div id="desni-futer">Knjizara copyright 2023&copy;</div>
+  </footer>
 </body>
 </html>
