Zavrsena prva verzija projekta

--- a/stranice/knjige/knjige.html
+++ b/stranice/knjige/knjige.html
@@ -20,14 +20,13 @@
         </li>
         <li><a href="../../index.html">Početna</a></li>
         <li><a href="knjige.html">Knjige</a></li>
-        <li><a href="stranice/pribor/pribor.html">Pribor</a></li>
-        <li><a href="stranice/galerija/galerija.html">Galerija</a></li>
-        <li><a href="stranice/kontakt/kontakt.html">Kontakt</a></li>
+        <li><a href="../pribor/pribor.html">Pribor</a></li>
+        <li><a href="../galerija/galerija.html">Galerija</a></li>
+        <li><a href="../kontakt/kontakt.html">Kontakt</a></li>
       </ul>
     </nav>
 
-    
-    <h1 id="naslov-knjige">Domaće knjige</h1>
+    <h1 id="naslov-knjige">Knjige</h1>
     <div>
         <div id="meni-selekt">
             <ul>Kategorije<br><br>
@@ -665,6 +664,7 @@
                ' </div>'; 
             }
         </script>
+        <div id="knjige-wrapper">
         <div id="knjige">
             <div class="knjiga-container" id="knjiga1">
                 <img src="img-knjige/doktorD.jpg" alt="Doktor D" class="img-knjiga">
@@ -791,7 +791,7 @@
                 </div>
             </div>
         </div>
-        
+    </div>
     </div>
 
     <footer id="footer">
