Sitne prepravke za prvu verziju

--- a/stranice/kontakt/kontakt.html
+++ b/stranice/kontakt/kontakt.html
@@ -30,7 +30,7 @@
   <h1 id="naslov-kontakt">Kontakt</h1>
 
   <div id="kontakt-sadrzaj">
-    <div class="kontakt-forma" style="display: flex; justify-content: center;">
+    <div class="kontakt-forma">
       <form>
         <label for="name">Ime:</label><br>
         <input type="text" id="name" name="name"><br>
